// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button - enzyme-mount-renderer 1`] = `"<button class=\\"b-btn\\"><span class=\\"b-btn__text\\">Hello</span></button>"`;

exports[`button - enzyme-mount-renderer enzyme-to-json 1`] = `
<button
  className="b-btn"
>
  <span
    className="b-btn__text"
  >
    Hello
  </span>
</button>
`;

exports[`button - enzyme-shallow-renderer 1`] = `"<button class=\\"b-btn\\"><span class=\\"b-btn__text\\">Hello</span></button>"`;

exports[`button - enzyme-shallow-renderer enzyme-to-json 1`] = `
<button
  className="b-btn"
>
  <span
    className="b-btn__text"
  >
    Hello
  </span>
</button>
`;

exports[`button - enzyme-static-renderer 1`] = `"<span class=\\"b-btn__text\\">Hello</span>"`;

exports[`button - enzyme-static-renderer enzyme-to-json 1`] = `
<button
  class="b-btn"
>
  <span
    class="b-btn__text"
  >
    Hello
  </span>
</button>
`;

exports[`button - react-test-renderer 1`] = `
<button
  className="b-btn"
>
  <span
    className="b-btn__text"
  >
    Hello
  </span>
</button>
`;

exports[`button - react-test-renderer toJSON 1`] = `
<button
  className="b-btn"
>
  <span
    className="b-btn__text"
  >
    Hello
  </span>
</button>
`;

exports[`button - reactDOMServer.renderToStaticMarkup + prettier 1`] = `
"<button class=\\"b-btn\\">
  <span class=\\"b-btn__text\\">Hello</span>
</button>;
"
`;

exports[`button - reactDOMServer.renderToStaticMarkup 1`] = `"<button class=\\"b-btn\\"><span class=\\"b-btn__text\\">Hello</span></button>"`;

exports[`input - enzyme-mount-renderer 1`] = `"<div class=\\"b-container\\"><div class=\\"b-input\\"><input class=\\"b-input__input\\" value=\\"Type here\\"><button class=\\"b-btn\\"><span class=\\"b-btn__text\\">Send</span></button></div></div>"`;

exports[`input - enzyme-mount-renderer enzyme-to-json 1`] = `
<div
  className="b-container"
>
  <div
    className="b-input"
  >
    <input
      className="b-input__input"
      defaultValue="Type here"
    />
    <button
      className="b-btn"
    >
      <span
        className="b-btn__text"
      >
        Send
      </span>
    </button>
  </div>
</div>
`;

exports[`input - enzyme-shallow-renderer 1`] = `"<div class=\\"b-container\\"><div class=\\"b-input\\"><input class=\\"b-input__input\\" value=\\"Type here\\"/><button class=\\"b-btn\\"><span class=\\"b-btn__text\\">Send</span></button></div></div>"`;

exports[`input - enzyme-shallow-renderer enzyme-to-json 1`] = `
<div
  className="b-container"
>
  <Input
    buttonText="Send"
    defaultValue="Type here"
  />
</div>
`;

exports[`input - enzyme-static-renderer 1`] = `"<div class=\\"b-input\\"><input class=\\"b-input__input\\" value=\\"Type here\\"><button class=\\"b-btn\\"><span class=\\"b-btn__text\\">Send</span></button></div>"`;

exports[`input - enzyme-static-renderer enzyme-to-json 1`] = `
<div
  class="b-container"
>
  <div
    class="b-input"
  >
    <input
      class="b-input__input"
      value="Type here"
    />
    <button
      class="b-btn"
    >
      <span
        class="b-btn__text"
      >
        Send
      </span>
    </button>
  </div>
</div>
`;

exports[`input - react-test-renderer 1`] = `
<div
  className="b-container"
>
  <div
    className="b-input"
  >
    <input
      className="b-input__input"
      defaultValue="Type here"
    />
    <button
      className="b-btn"
    >
      <span
        className="b-btn__text"
      >
        Send
      </span>
    </button>
  </div>
</div>
`;

exports[`input - react-test-renderer toJSON 1`] = `
<div
  className="b-container"
>
  <div
    className="b-input"
  >
    <input
      className="b-input__input"
      defaultValue="Type here"
    />
    <button
      className="b-btn"
    >
      <span
        className="b-btn__text"
      >
        Send
      </span>
    </button>
  </div>
</div>
`;

exports[`input - reactDOMServer.renderToStaticMarkup + prettier 1`] = `
"<div class=\\"b-container\\">
  <div class=\\"b-input\\">
    <input class=\\"b-input__input\\" value=\\"Type here\\" />
    <button class=\\"b-btn\\">
      <span class=\\"b-btn__text\\">Send</span>
    </button>
  </div>
</div>;
"
`;

exports[`input - reactDOMServer.renderToStaticMarkup 1`] = `"<div class=\\"b-container\\"><div class=\\"b-input\\"><input class=\\"b-input__input\\" value=\\"Type here\\"/><button class=\\"b-btn\\"><span class=\\"b-btn__text\\">Send</span></button></div></div>"`;
